syntax = "proto3";
package sonrio.sonr.object;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "object/v1/params.proto";
import "object/v1/what_is.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sonr-io/sonr/x/object/types";

// Query defines the gRPC querier service.
service Query {
	// Params
	//
	// Parameters queries the parameters of the module.
	rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
		option (google.api.http).get = "/sonrio/sonr/object/params";
	}

	// WhatIs
	//
	// Queries a WhatIs by DID.
	rpc WhatIs(QueryWhatIsRequest) returns (QueryWhatIsResponse) {
		option (google.api.http).get = "/sonr-io/sonr/object/what_is/{did}";
	}

	// WhatIsAll
	//
	// Queries a list of WhatIs items.
	rpc WhatIsAll(QueryAllWhatIsRequest) returns (QueryAllWhatIsResponse) {
		option (google.api.http).get = "/sonr-io/sonr/object/what_is";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryWhatIsRequest {
	string did = 1;
}

message QueryWhatIsResponse {
	WhatIs what_is = 1 [(gogoproto.nullable) = false];
}

message QueryAllWhatIsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllWhatIsResponse {
	repeated WhatIs what_is = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
